--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [workspace]
 members = [
-    "packages/core", # Core library
-    # "apps/tui-app",              # TUI application
-    # "apps/tauri-app/src-tauri",  # Tauri backend
-    # "apps/decky-plugin/backend", # Decky CLI helper
+    "packages/core",            # Core library
+    "apps/tui-app",             # TUI application
+    "apps/tauri-app/src-tauri", # Tauri backend
+    "apps/daemon",              # HTTP API daemon
 ]
 resolver = "2"
