--- a/apps/tui-app/Cargo.toml
+++ b/apps/tui-app/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "steamos-mount-core"
+name = "steamos-mount-tui"
 version = "0.1.0"
 edition = "2024"
 
-
 [dependencies]
+ratatui = "0.30.0"
