--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "steamos-mount",
   "version": "0.1.0",
   "description": "Ergonomic NTFS/exFAT drive auto-mounter for SteamOS",
+  "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {},
   "keywords": [
     "steamos",
@@ -18,5 +23,17 @@
     "fstab"
   ],
   "author": "aitiotekt",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "devDependencies": {
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^5.1.2",
+    "typescript": "~5.9.3",
+    "vite": "^7.0.4"
+  },
+  "packageManager": "pnpm@10.28.0"
 }
