--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -3,5 +3,13 @@ name = "steamos-mount-core"
 version = "0.1.0"
 edition = "2024"
 
-
 [dependencies]
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+snafu = "0.8"
+dirs = "6"
+nix = { version = "0.30", features = ["fs", "process", "signal"] }
+keyvalues-serde = "0.2"
+
+[dev-dependencies]
+tempfile = "3"
