--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -8,7 +8,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 snafu = "0.8"
 dirs = "6"
-nix = { version = "0.30", features = ["fs", "process", "signal"] }
+nix = { version = "0.30", features = ["fs", "process", "signal", "user"] }
 keyvalues-serde = "0.2"
 
 [dev-dependencies]
