--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
   "author": "aitiotekt",
   "license": "MIT",
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@biomejs/biome": "^2.3.11",
+    "@types/node": "^25",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "typescript": "~5.9.3",
-    "vite": "^7.0.4"
+    "vite": "^7.3.1"
   },
   "packageManager": "pnpm@10.28.0"
 }
