--- a/.github/workflows/build-tauri-app.yml
+++ b/.github/workflows/build-tauri-app.yml
@@ -24,7 +24,12 @@ jobs:
         uses: pnpm/action-setup@v4
         with:
           version: 10.28.0
-          cache: true
+      
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+          cache: pnpm
       
       - name: Install dependencies
         run: cd apps/tauri-app && pnpm install
