--- a/.github/workflows/build-tauri-app.yml
+++ b/.github/workflows/build-tauri-app.yml
@@ -54,10 +54,18 @@ jobs:
             echo "prerelease=false" >> $GITHUB_OUTPUT
           fi
 
+      - name: Cache Tauri CLI
+        id: cache-tauri
+        uses: actions/cache@v4
+        with:
+          path: ~/.cargo/bin/tauri
+          key: ${{ runner.os }}-tauri-cli-experimental-v1
+
       - name: Install Tauri CLI (Experimental AppImage)
+        if: steps.cache-tauri.outputs.cache-hit != 'true'
         run: |
           cargo install tauri-cli \
-            --git https://github.com/tauri-apps/tauri \
+            --git https://github.com/aitiotekt/tauri \
             --branch feat/truly-portable-appimage \
             --force
 
