--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -10,6 +10,10 @@ snafu = "0.8"
 dirs = "6"
 nix = { version = "0.30", features = ["fs", "process", "signal", "user"] }
 keyvalues-serde = "0.2"
+hmac = "0.12"
+sha2 = "0.10"
+rand = "0.9"
+hex = "0.4"
 
 [dev-dependencies]
 tempfile = "3"
