--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ members = [
     "apps/cli",                 # CLI application
 ]
 resolver = "2"
+
+[workspace.dependencies]
+snafu = "0.8"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
