--- a/apps/tauri-app/src-tauri/Cargo.toml
+++ b/apps/tauri-app/src-tauri/Cargo.toml
@@ -19,9 +19,11 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 tauri = { version = "2", features = [] }
+serde = { workspace = true }
+serde_json = { workspace = true }
+snafu = { workspace = true }
 tauri-plugin-opener = "2"
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+tauri-plugin-shell = "2"
 steamos-mount-core = { path = "../../../packages/core" }
 tauri-plugin-store = "2.4.2"
 tauri-plugin-dialog = "2.5.0"
