--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-serde = { version = "1", features = ["derive"] }
-serde_json = "1"
-snafu = "0.8"
+serde = { workspace = true }
+serde_json = { workspace = true }
+snafu = { workspace = true }
 dirs = "6"
 nix = { version = "0.30", features = ["fs", "process", "signal", "user"] }
 keyvalues-serde = "0.2"
