--- a/apps/tauri-app/src-tauri/Cargo.toml
+++ b/apps/tauri-app/src-tauri/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "steamos-mount-tauri"
 version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-edition = "2021"
+description = "A Tauri App for managing NTFS/exFAT drive mounts on SteamOS."
+authors = ["Aitiotekt <root@aitiotekt.com>"]
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
