--- a/.github/workflows/build-tauri-app.yml
+++ b/.github/workflows/build-tauri-app.yml
@@ -78,7 +78,7 @@ jobs:
           cargo build --release --bin steamos-mount-cli
 
       - name: Build and Release
-        uses: tauri-apps/tauri-action@390cbe447412ced1303d35abe75287949e43437a
+        uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           TAURI_BUNDLER_NEW_APPIMAGE_FORMAT: "true"
@@ -89,5 +89,5 @@ jobs:
           releaseBody: "See the assets to download this version and install."
           releaseDraft: true
           prerelease: ${{ steps.get_version.outputs.prerelease }}
-          tauriScript: "cargo tauri"
+          tauriScript: "pnpm tauri"
           args: --target x86_64-unknown-linux-gnu
