--- a/.github/workflows/build-tauri-app.yml
+++ b/.github/workflows/build-tauri-app.yml
@@ -59,15 +59,15 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cargo/bin
-          key: ${{ runner.os }}-tauri-cli-experimental-v1
+          key: ${{ runner.os }}-tauri-cli-experimental-v2
           restore-keys: |
-            ${{ runner.os }}-tauri-cli-experimental-v1
+            ${{ runner.os }}-tauri-cli-experimental-v2
 
       - name: Install Tauri CLI (Experimental AppImage)
         if: steps.cache-tauri.outputs.cache-hit != 'true'
         run: |
           cargo install tauri-cli \
-            --git https://github.com/tauri-apps/tauri \
+            --git https://github.com/aitiotekt/tauri \
             --branch feat/truly-portable-appimage \
             --force
 
