--- a/apps/decky-plugin/pyproject.toml
+++ b/apps/decky-plugin/pyproject.toml
@@ -1,12 +1,10 @@
 [project]
 name = "steamos-mount-decky"
-version = "0.1.0"
+version = "0.1.1"
 description = "Decky plugin for steamos-mount"
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = []
 
 [dependency-groups]
-dev = [
-    "ruff>=0.14.11",
-]
+dev = ["ruff>=0.14.11"]
