--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "steamos-mount",
-  "version": "0.1.2",
+  "version": "0.1.3",
+  "type": "module",
   "description": "Ergonomic NTFS/exFAT drive auto-mounter for SteamOS",
   "private": true,
   "workspaces": [
